tests/int/snapshots/integration__int__use_command__module_nonexisting.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - nonexisting
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Module 'nonexisting' not found
