tests/int/snapshots/integration__int__use_command__module_tests_flags_r_t_e_g_G.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - tests
    - "-r"
    - "-t"
    - "-e"
    - "-g"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
tests
 - crate::AnalysisOptions

----- stderr -----
